src/index.css
@font-face {
	font-family: Terminal;
	src: url(/Terminal_Font.ttf);
}

:root {
	--terminal-green: hsl(120, 100%, 49%);
}

#root {
	height: 100svh;
}

body {
	margin: 0;
	height: 100svh;
	background-color: black;
	font-size: 40px;
}

body,
button,
input {
	font-family: Terminal;
	color: var(--terminal-green);
}

input,
button,
ul,
textarea {
	all: unset;
}
li {
	list-style-type: none;
}

/* Bug that can be used to scale the caret */
/* input {
	font-size: 4px;
	transform: scale(10);
	transform-origin: 0 58%;
} */

.selected {
	background-color: var(--terminal-green);
	color: black;
	outline: none;
}

li:has(> textarea) {
	/* display: grid;
	grid-auto-flow: column;
	justify-content: start;
	grid-template-columns: auto 1fr; */
	display: flex;
}

li:has(> input) {
	display: flex;
}

input,
textarea {
	margin-left: 1rem;
	width: max-content;
	flex: 1;
}

textarea {
	word-wrap: break-word;
	overflow: hidden;
	resize: none;
}
/* form {
	flex: 10;
	display: flex;
} */

ul {
	/* flex: 1; */
	display: flex;
	flex-direction: column;
}

.main {
	flex: auto;
	display: flex;
	flex-direction: column;
}

.send-message-form {
	display: flex;
	flex-direction: column;
	flex: 10;
}

.send-message-form > ul {
	flex: auto;
}

.send-message-form > ul > .message {
	flex: auto;
}

.go-back {
	flex: 1;
}

.scanlines {
	overflow: hidden;
	position: relative;
	width: 100svw;
	height: 100svh;
	display: grid;
}
.scanlines:before,
.scanlines:after {
	display: block;
	pointer-events: none;
	content: "";
	position: absolute;
}
.scanlines:before {
	width: 100%;
	height: 2px;
	z-index: 2147483649;
	background: rgba(0, 0, 0, 0.3);
	opacity: 0.75;
	animation: scanline 6s linear infinite;
}
.scanlines:after {
	top: 0;
	right: 0;
	bottom: 0;
	left: 0;
	z-index: 2147483648;
	background: linear-gradient(
		to bottom,
		transparent 50%,
		rgba(0, 0, 0, 0.3) 51%
	);
	background-size: 100% 4px;
	animation: scanlines 1s steps(60) infinite;
}

.content {
	padding: 20px 60px;
	display: flex;
	flex-direction: column;
}

.cursor {
	animation: blink 0.4s steps(1) infinite;
}

.message-display {
	white-space: pre-wrap;
	word-wrap: break-word;
	overflow: hidden;
}

/* .pre-message {
	display: grid;
	grid-auto-flow: column;
	justify-content: start;
	gap: 100px;
} */

.invisible {
	visibility: hidden;
}

/* ANIMATE UNIQUE SCANLINE */
@keyframes scanline {
	0% {
		transform: translate3d(0, 200000%, 0);
	}
}
@keyframes scanlines {
	0% {
		background-position: 0 50%;
	}
}

/* Cursor animation */

@keyframes blink {
	0% {
		opacity: 1;
	}
	50% {
		opacity: 0;
	}
}

/* Responsiveness */

@media (max-height: 850px) {
	body {
		font-size: 32px;
	}
}

@media (max-height: 660px) {
	body {
		font-size: 24px;
	}
}

@media (max-height: 480px) {
	body {
		font-size: 16px;
	}
}

@media (max-height: 350px) {
	body {
		font-size: 12px;
	}
}

@media (max-height: 240px) {
	body {
		font-size: 8px;
	}
}

